--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ alembic = "^1.13.1"
 python-dotenv = "^1.0.1"
 python-multipart = "^0.0.9"
 asyncpg = "^0.29.0"
+jinja2 = "^3.1.4"
 
 
 [tool.poetry.group.dev.dependencies]
