--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = []
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.12.1"
+python = ">=3.12.1, <=3.12.3"
 fastapi = "^0.111.0"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
 uvicorn = "^0.29.0"
